--- a/2025/00/c/Makefile
+++ b/2025/00/c/Makefile
@@ -1,11 +1,11 @@
 CC := gcc
-CFLAGS := -std=c99 -Wall -Wextra -pedantic
+CFLAGS := -std=c99 -Wall -Wextra -pedantic -Wfatal-errors
 
-part1: part1.c
-	${CC} ${CFLAGS} $^ -o $@
+part1: main.c
+	${CC} ${CFLAGS} $^ -o $@ -DPART=1
 
-part2: part2.c
-	${CC} ${CFLAGS} $^ -o $@
+part2: main.c
+	${CC} ${CFLAGS} $^ -o $@ -DPART=2
 
 .PHONY: clean
 clean:
